[gd_scene load_steps=5 format=3 uid="uid://cw27pil0fod1c"]

[ext_resource type="Script" path="res://Scenes/EntityComponents/Detectors/RopeSwingDetector.gd" id="1_flngt"]
[ext_resource type="Texture2D" uid="uid://d04dad3rgrd4f" path="res://icon.svg" id="2_40kwg"]
[ext_resource type="Script" path="res://Scenes/NodeVariants/AreaVisualizer.gd" id="3_t2i1y"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6htrd"]
radius = 5.0
height = 12.0

[node name="RopeSwingDetector" type="Node2D"]
script = ExtResource("1_flngt")

[node name="Visualizer" type="Sprite2D" parent="." node_paths=PackedStringArray("target")]
modulate = Color(1, 1, 1, 0.701961)
position = Vector2(0, -8)
scale = Vector2(0.032, 0.032)
texture = ExtResource("2_40kwg")
script = ExtResource("3_t2i1y")
target = NodePath("../RopeChecker")
off = Color(0.690196, 0, 0, 0.709804)
on = Color(0, 0.529412, 0, 0.670588)

[node name="RopeChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RopeChecker"]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_6htrd")

[connection signal="area_entered" from="RopeChecker" to="." method="on_rope_checker_area_entered"]
[connection signal="area_exited" from="RopeChecker" to="." method="on_rope_checker_area_exited"]
